--- a/Crispc_Be/.env
+++ b/Crispc_Be/.env
@@ -1,1 +1,10 @@
+PORT=5000
 JWT_SECRET=cc
+JWT_ISSUER=fastfood-api
+JWT_AUDIENCE=fastfood-client
+
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_NAME=fastfood
+DB_USER=root
+DB_PASS=
