--- a/Crispc_Be/.env
+++ b/Crispc_Be/.env
@@ -2,5 +2,8 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=shopgaran
 DB_USER=root
-DB_PASS=''
+DB_PASS='1'
 JWT_SECRET=shopgaran
+
+HOST = localhost
+PORT = 3001
