--- a/server/.env
+++ b/server/.env
@@ -5,6 +5,7 @@ DB_USER=root
 DB_PASS=''
 
 CLIENT_URL=http://localhost:3000
+CLIENT_RESET_URL=http://localhost:3000/reset-password
 
 JWT_SECRET=shopgaran
 JWT_REFRESH_SECRET=mot_chuoi_bi_mat_khac_dai_hon_va_ngau_nhien_hon_shopgaran
@@ -14,3 +15,10 @@ PORT = 3001
 
 JWT_ACCESS_EXPIRES=15m
 JWT_REFRESH_EXPIRES=7d
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=manhnguyen1768@gmail.com
+SMTP_PASS=sbjwqrxrurhonuvo
+SMTP_FROM="ShopGaran <manhnguyen1768@gmail.com>"
