--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "bcryptjs": "^3.0.3",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "dotenv": "^17.2.3",
         "express": "^5.1.0",
         "express-rate-limit": "^8.2.1",
@@ -23,8 +24,9 @@
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
         "mysql2": "^3.15.3",
-        "nodemailer": "^7.0.10",
-        "slugify": "^1.6.6"
+        "react-hot-toast": "^2.6.0",
+        "slugify": "^1.6.6",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
