--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
         "mysql2": "^3.15.3",
+        "nodemailer": "^7.0.10",
         "react-hot-toast": "^2.6.0",
         "slugify": "^1.6.6",
         "uuid": "^13.0.0"
