update promotion client

--- a/server/.env
+++ b/server/.env
@@ -21,4 +21,4 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=manhnguyen1768@gmail.com
 SMTP_PASS=sbjwqrxrurhonuvo
-SMTP_FROM="ShopGaran <manhnguyen1768@gmail.com>"
+SMTP_FROM="ShopGaran manhnguyen1768@gmail.com"
