add apikey sepay

--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,7 @@ DB_PORT=3306
 DB_NAME=shopgaran
 DB_USER=root
 DB_PASS=''
+SEPAY_API_KEY= 'YOUR_SEPAY_APIKEY'
 
 CLIENT_URL=http://localhost:3000
 CLIENT_RESET_URL=http://localhost:3000/reset-password
