--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.13.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
